Added clock-hand additional challenge

--- a/index.html
+++ b/index.html
@@ -1264,6 +1264,7 @@
     Congratulations!
   </p>
 
+
   <!--
   <code class="block">
     ; Code :
@@ -1280,6 +1281,15 @@
 
 
 <!-- Challenge: adding hands to the clock face -->
+<h2>Additional Challenges</h2>
+
+<h3>Adding Hands to the Clock-Face</h3>
+
+<p>
+  Now that we have a clock-face populated with numbers, try adding hands to the clock-face.
+  Once you successfully add hands, write a function that takes the time as an hour and a minute
+  and returns a clock-face with the hands in the positions corresponding to the current time.
+</p>
 
 <!-- Footer -->
 
